[tool.poetry]
name = "cinemabot"
version = "0.1.0"
description = ""
authors = ["Stas Dzasokhov <stsklv@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.24"
bs4 = "^0.0.1"
requests = "^2.28.2"
python-dotenv = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
